# R-Compiler

./: .gitignore  CMakeLists.txt  README.md  main.cpp  wrongtestcases.txt
.ci/: run_all_test.sh  run_all_tests.sh  semantic_test.sh
.github/workflows/: test.yml
docs/: ideas.md  semantic.txt  total.txt
docs/Data/ASTAnnotation/: Annotation.md  ConstInfo.md  ConstValue.md  README.md  Scope.md  Symbol.md  TraitDef.md  TypeDef.md  TypeKind.md  ValueInfo.md
docs/Semantic/ConstTypeManager/: ConstEvaluator.md
docs/Tower/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  semantic.txt  total.txt
header/ASTAnnotation/: ASTAnnotator.hpp  ConstEvaluator.hpp  ConstInfo.hpp  ConstValue.hpp  Scope.hpp  Symbol.hpp  TraitDef.hpp  TypeDef.hpp  TypeKind.hpp  ValueInfo.hpp
header/ASTAnnotator/: ASTAnnotator.hpp  BuiltInInit.hpp  ScopeBuiltInInit.hpp
header/ASTNode/: ASTNode.hpp  ASTNodeTotal.hpp  ASTRootNode.hpp  ExprANode.hpp  ExprArrayIndexNode.hpp  ExprArrayNode.hpp  ExprBlockNode.hpp  ExprBorrowNode.hpp  ExprCallNode.hpp  ExprDereferNode.hpp  ExprFieldNode.hpp  ExprFlowNode.hpp  ExprGroupNode.hpp  ExprIfNode.hpp  ExprLiteralNode.hpp  ExprLoopNode.hpp  ExprMatchNode.hpp  ExprMethodNode.hpp  ExprOperBinaryNode.hpp  ExprOperUnaryNode.hpp  ExprOperatorNode.hpp  ExprPathNode.hpp  ExprStructNode.hpp  ExprTupleIndexNode.hpp  ExprTupleNode.hpp  ExprUnderScoreNode.hpp  ItemANode.hpp  ItemConstNode.hpp  ItemConstantNode.hpp  ItemEnumNode.hpp  ItemFnNode.hpp  ItemImplNode.hpp  ItemModuleNode.hpp  ItemStructNode.hpp  ItemTraitNode.hpp  PathANode.hpp  PathNode.hpp  PathQualifiedNode.hpp  PathSimpleNode.hpp  PatternANode.hpp  (+24 more)
header/ASTNotation/: Scope.hpp
header/ASTVisitor/: ConstEvaluator.hpp  ConstTypeCollector.hpp  ConstTypeEvaluator.hpp  FuncSymbolCollector.hpp  FuncTraitCollector.hpp  FunctionCollector.hpp  ImplChecker.hpp  SemanticChecker.hpp  SymbolAnnotator.hpp  SymbolCollector.hpp  TypeSymbolCollector.hpp  Visitor.hpp
header/Data/ASTAnnotation/: ConstInfo.hpp  ConstValue.hpp  TypeDef.hpp
header/Data/ASTNode/: ASTNode.hpp  ASTNodeTotal.hpp  ASTRootNode.hpp  ExprANode.hpp  ExprFieldNode.hpp  ExprGroupNode.hpp  ExprIfNode.hpp  ExprLoopNode.hpp  ExprMatchNode.hpp  ExprOperatorNode.hpp  ExprPathNode.hpp  ExprUnderScoreNode.hpp  ItemImplNode.hpp  PathNode.hpp  PatternANode.hpp  PatternLiteralNode.hpp  PatternWildNode.hpp  StmtANode.hpp  StmtExprNode.hpp
header/Lexer/: Lexer.hpp  Token.hpp  lexer.hpp  token.hpp
header/Parser/: Parser.hpp  ParserTotal.hpp
header/Semantic/ASTVisitor/: SemanticChecker.hpp  Visitor.hpp
header/utils/: cast.hpp  exception.hpp  logger.hpp  position.hpp
src/: main.cpp
src/ASTAnnotation/: ConstEvaluator.cpp  ConstInfo.cpp  ConstValue.cpp  Scope.cpp  Symbol.cpp  TraitDef.cpp  TypeDef.cpp  TypeKind.cpp  ValueInfo.cpp
src/ASTAnnotator/: ASTAnnotator.cpp  BuiltInInit.cpp  ScopeBuiltInInit.cpp
src/ASTNode/: ASTRootNode.cpp  ExprArrayIndexNode.cpp  ExprArrayNode.cpp  ExprBlockNode.cpp  ExprBorrowNode.cpp  ExprCallNode.cpp  ExprDereferNode.cpp  ExprFieldNode.cpp  ExprFlowNode.cpp  ExprGroupNode.cpp  ExprIfNode.cpp  ExprLiteralNode.cpp  ExprLoopNode.cpp  ExprMatchNode.cpp  ExprMethodNode.cpp  ExprOperBinaryNode.cpp  ExprOperUnaryNode.cpp  ExprPathNode.cpp  ExprStructNode.cpp  ExprTupleIndexNode.cpp  ExprTupleNode.cpp  ExprUnderScoreNode.cpp  ItemConstNode.cpp  ItemConstantNode.cpp  ItemEnumNode.cpp  ItemFnNode.cpp  ItemImplNode.cpp  ItemModuleNode.cpp  ItemStructNode.cpp  ItemTraitNode.cpp  PathNode.cpp  PathQualifiedNode.cpp  PathSimpleNode.cpp  PatternGroupNode.cpp  PatternIDNode.cpp  PatternLiteralNode.cpp  PatternMultNode.cpp  PatternPathNode.cpp  PatternReferNode.cpp  PatternSliceNode.cpp  (+14 more)
src/ASTNotation/: Scope.cpp  TypeDef.cpp
src/ASTVisitor/: ConstEvaluator.cpp  ConstTypeCollector.cpp  ConstTypeEvaluator.cpp  ConstantEvaluator.cpp  FuncSymbolCollector.cpp  FuncTraitCollector.cpp  FunctionCollector.cpp  ImplChecker.cpp  ScopeBuiltInInit.cpp  SemanticChecker.cpp  SymbolAnnonator.cpp  SymbolAnnotator.cpp  SymbolCollector.cpp  TypeSymbolCollector.cpp
src/Data/ASTAnnotation/: ConstInfo.cpp  Scope.cpp  Symbol.cpp  TraitDef.cpp  ValueInfo.cpp
src/Data/ASTNode/: ASTRootNode.cpp  ExprArrayNode.cpp  ExprBlockNode.cpp  ExprFieldNode.cpp  ExprGroupNode.cpp  ExprIfNode.cpp  ExprLiteralNode.cpp  ExprMethodNode.cpp  ExprOperBinaryNode.cpp  ItemEnumNode.cpp  ItemFnNode.cpp  ItemStructNode.cpp  ItemTraitNode.cpp  PatternLiteralNode.cpp  PatternPathNode.cpp  StmtExprNode.cpp  StmtItemNode.cpp  StmtLetNode.cpp  TypeReferNode.cpp  TypeUnitNode.cpp
src/Data/Token/: Token.cpp
src/Lexer/: Lexer.cpp  lexer.cpp  token.cpp
src/Parser/: Parser.cpp  ParserExpr.cpp  ParserItem.cpp  ParserPath.cpp  ParserPattern.cpp  ParserStmt.cpp  ParserType.cpp
src/Semantic/: ASTAnnotator.cpp
src/Semantic/ASTVisitor/: FuncTraitCollector.cpp  (+1 more)
src/utils/: exception.cpp  logger.cpp  position.cpp
tests/: CMakeLists.txt  lexer_test.cpp  main_test.cpp
tests/header/: utils.hpp
tests/src/: AllTest.cpp  AnnotatorTest.cpp  LexerTest.cpp  ParserTest.cpp  SemanticTest.cpp  utils.cpp
tests/testcases/: lexer_2.in  lexer_4.in
tests/testcases/Annotator/: array1.in  array2-1.in  array2-2.in  condition1.in  control_1.in  control_2.in  controlflow1.in  controlflow2.in  controlflow3.in  controlflow4-1.in  controlflow4-2.in  impl1.in  impl2.in  impl3-1.in  impl3-2.in  literal1.in  mut1.in  mut2.in  mut3.in  pattern1.in  pattern2.in  scope1-1.in  scope1-2.in  scope_1.in  shadow1.in  shadow2.in  shadow3.in  shadow4.in  shadow5.in  shadow6.in  shadow7.in  solve1-1.in  solve1-2.in  solve1-3.in  solve2.in  solve3.in  solve4.in  solve5.in  type1-1.in  type1-2.in  (+12 more)
tests/testcases/lexer/: lexer1.in  lexer2.in  lexer3.in  lexer4.in  lexer_1.in  lexer_3.in
tests/testcases/semantic/: ALLResult.in  AllResult.in  basic37.rx  expr33.rx  expr36.rx  if1.rx  if10.rx  if12.rx  if13.rx  if14.rx  if15.rx  if4.rx  if5.rx  if8.rx  if9.rx  loop1.rx  loop10.rx  loop2.rx  loop3.rx  loop4.rx  loop5.rx  loop6.rx  loop7.rx  misc14.rx  misc57.rx  misc65.rx  return13.rx  type2.rx  type4.rx  type5.rx
(+2 files in other folders)
